# fastapi-boilerplate

./: .env  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  abc1.py  alembic.ini  docker-compose.yml  pre_start.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 7468fd955bae_added_user_table.py
app/: main.py  utils.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: base.py  items.py  login.py  users.py
app/core/: config.py
app/db/: init_db.py
app/models/: item.py
app/schemas/: __init__.py
app/tests/: conftest.py
app/tests/crud/: test_item.py
app/tests/factory/: factory.py
app/tests/utils/: user.py
