[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["tnhoang <tnhoang088@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "7.1.2"
fastapi = "0.63.0"
h11 = "0.12.0"
httptools = "0.1.1"
pydantic = "1.8.1"
python-dotenv = "0.17.0"
PyYAML = "5.4.1"
starlette = "0.13.6"
typing-extensions = "3.7.4.3"
uvicorn = "0.13.4"
uvloop = "0.15.2"
watchgod = "0.7"
websockets = "8.1"
greenlet = "1.0.0"
SQLAlchemy = "^1.4.5"
alembic = "1.5.8"
dnspython = "2.1.0"
ecdsa = "0.14.1"
email-validator = "1.1.2"
Mako = "1.1.4"
MarkupSafe = "1.1.1"
mypy = "0.812"
mypy-extensions = "0.4.3"
passlib = "1.7.4"
pipdeptree = "2.0.0"
psycopg2 = "2.8.6"
pyasn1 = "0.4.8"
python-dateutil = "2.8.1"
python-editor = "1.0.4"
python-jose = "3.2.0"
rsa = "4.7.2"
six = "1.15.0"
typed-ast = "1.4.2"
bcrypt = "^3.2.0"
pre-commit = "^2.11.1"
pip = "^21.0.1"
install = "^1.3.4"
python-multipart = "^0.0.5"
pytest = "^6.2.3"
requests = "2.23.0"
pytest-testmon = "^1.1.0"
pytest-xdist = "^2.2.1"
pytest-watch = "^4.2.0"
pytest-clarity = "^0.3.0-alpha.0"
black = "^20.8b1"
pytest-cov = "^2.11.1"
tenacity = "^7.0.0"
factory-boy = "^3.2.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
